--- a/TVTK/科学计算可视化.md
+++ b/TVTK/科学计算可视化.md
@@ -1,6 +1,26 @@
 <font face = "楷体" >
 
-<!-- TOC -->autoauto- [一、 TVTK库简要介绍](#一-tvtk库简要介绍)auto    - [1. 目的：科学计算可视化](#1-目的科学计算可视化)auto    - [2. TVTK安装](#2-tvtk安装)auto    - [3. 三维基本对象](#3-三维基本对象)auto        - [3.1 长方体对象](#31-长方体对象)auto        - [3.2 其他](#32-其他)auto    - [4 观察代码](#4-观察代码)auto    - [5. 管线](#5-管线)auto    - [6. 数据集-Imagedata](#6-数据集-imagedata)auto    - [7. 数据加载](#7-数据加载)auto    - [8. 经典过程](#8-经典过程)auto- [二、 高级运用](#二-高级运用)autoauto<!-- /TOC -->
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [一、 TVTK库简要介绍](#一-tvtk库简要介绍)
+  - [1. 目的：科学计算可视化](#1-目的科学计算可视化)
+  - [2. TVTK安装](#2-tvtk安装)
+  - [3. 三维基本对象](#3-三维基本对象)
+    - [3.1 长方体对象](#31-长方体对象)
+    - [3.2 其他](#32-其他)
+  - [4 观察代码](#4-观察代码)
+  - [5. 管线](#5-管线)
+  - [6. 数据集-Imagedata](#6-数据集-imagedata)
+  - [7. 数据加载](#7-数据加载)
+  - [8. 经典过程](#8-经典过程)
+    - [8.1 模型创建](#81-模型创建)
+    - [8.2 数据预处理](#82-数据预处理)
+    - [8.3 开启交互式界面](#83-开启交互式界面)
+- [二、 高级运用](#二-高级运用)
+
+<!-- /code_chunk_output -->
 
 # 一、 TVTK库简要介绍
 
@@ -20,7 +40,7 @@
    1. 矢量数据场流线法![图 5](../images/df18a9d6542d9c7c2b90b59b8a046c100ee50648245b284078d7e57324f9f469.png)
    2. 矢量数据场直接法![图 6](../images/d8b3aea01090ad0e27f6531eb6c7c4570f1320ea7a045e00ba46168b004b37ac.png)  
 
-## 2. TVTK安装 
+## 2. TVTK安装
 
 开源跨平台三维图形库，有国家实验室测试过
 ![图 7](../images/792bd7e620e8833f09bf430a3ce2dc9f1a9dd6361855819175adfbf2fe6538e0.png)  
@@ -31,16 +51,17 @@
 from tvtk.tools import tvtk_doc
 tvtk_doc.main()
 ```
+
 traits是TVTK的属性，相当于用traits封装
-
-
 
 ## 3. 三维基本对象
 
 ### 3.1 长方体对象
+
 里面的值都可以查看
 ![图 8](../images/ccf540938285a011242897bea47bb35ca81e9e2b3a894b4cae498cdae18d6ab3.png)  
 更多细节看文档，以下是代码示例
+
 ```python
 from tvtk.api import tvtk
 #创建一个长方体数据源，并且同时设置其长寬高
@@ -108,7 +129,6 @@ event_loop( )
 
 ![图 16](../images/698ae9c6e29b03a2e94976f7d22506920a120e508a4facf45e27028e83923304.png)  
 
-
 ## 5. 管线
 
 管线技术，流水线技术，渲染引擎会提到
@@ -141,7 +161,6 @@ RectilinearGrid：间距不均匀的网格，所有点都在正交的网格上
 StructuredGrid:创建任意形状的网格，需要指定点的坐标。
 PolyData:由一系列的点、点之间的联系以及由点构成的多边形组成。
 ![图 18](../images/42228dfbcd7373ddcf9bd4b88efd48f9f66c358483bdd5c376e7745ac2e64e74.png)  
-
 
 常用函数
 
@@ -178,7 +197,7 @@ Plot3D文件
 * 网格 (XYZ 文件),
 * 空气动力学结果 (Q 文件)
 * 通用结果
-multiBlock 
+multiBlock
 
 ```python
 def read()
@@ -193,9 +212,10 @@ def read()
 plot3d = read_data()
 grid = plot3d.output.get_block(0)
 ```
+
 ## 8. 经典过程
 
-1. 模型创建
+### 8.1 模型创建
 
 ```python
 from tvtk.api import tvtk
@@ -205,14 +225,14 @@ s = tvtk. CubeSource(x_length=1.0, y_length=2.0, z_length=3.0)
 
 或者是打开数据源文件，见数据读取
 
-2. 数据预处理
+### 8.2 数据预处理
 
 ```python
 m = tvtk.PolyDataMapper(input_connection=s.output_port)
 a = tvtk.Actor(mapper=m)
 ```
 
-3. 开启交互式界面
+### 8.3 开启交互式界面
 
 ```python
 win = ivtk_scene(a)
@@ -221,9 +241,3 @@ event_loop()
 ```
 
 # 二、 高级运用
-
-
-
-
-
-
