--- a/TVTK/科学计算可视化.md
+++ b/TVTK/科学计算可视化.md
@@ -18,7 +18,27 @@
     - [8.1 模型创建](#81-模型创建)
     - [8.2 数据预处理](#82-数据预处理)
     - [8.3 开启交互式界面](#83-开启交互式界面)
-- [二、 高级运用](#二-高级运用)
+- [二、 标量可视化](#二-标量可视化)
+  - [1. 等值面](#1-等值面)
+  - [2. 绘制等值面](#2-绘制等值面)
+    - [设定N条等值线的值，一般用于重新绘制等值线](#设定n条等值线的值一般用于重新绘制等值线)
+    - [设指定等值面和对应的等值面的值](#设指定等值面和对应的等值面的值)
+- [三、 矢量数据可视化](#三-矢量数据可视化)
+  - [1. 符号化技术](#1-符号化技术)
+  - [2. 降采样](#2-降采样)
+  - [3. 表示符号](#3-表示符号)
+- [四、空间轮廓可视化](#四空间轮廓可视化)
+  - [1. 外边框](#1-外边框)
+    - [计算Polydata外边框](#计算polydata外边框)
+  - [代码](#代码)
+- [五、 Mayavi库](#五-mayavi库)
+  - [1. 基本元素](#1-基本元素)
+    - [1 . mlab](#1--mlab)
+    - [2. API](#2-api)
+    - [操作](#操作)
+  - [2. 管线](#2-管线)
+  - [3. 基于numpy的可视化](#3-基于numpy的可视化)
+    - [3D绘图函数-Points3d()](#3d绘图函数-points3d)
 
 <!-- /code_chunk_output -->
 
@@ -27,18 +47,23 @@
 ## 1. 目的：科学计算可视化
 
 1. 二维标量场
-   1. 颜色映射法![图](img/20200626213842.png)
-   2. 等值线![图 1](../images/85b9c51730f4b9a6f75ccc6f0151c9b78d2162f25ee16673fa0ea0b7ad677e3e.png)  
-   3. 立体图法和层次分割法——地理![图 2](../images/bc7f74e60c8cec1d3889ca6d566c9f9bc35814c394183252d6dd15a4dec132bc.png)  
+   1. 颜色映射法![![图](img/20200626213842.png) 1](images/8c002b36235cffb9285b2557c91afa44340a9560cda43189bd41a0ec05a308b1.png)  
+   2. 等值线![![图 1](../images/85b9c51730f4b9a6f75ccc6f0151c9b78d2162f25ee16673fa0ea0b7ad677e3e.png)  1](images/9a5d9f2aedb8f329bcdce243b41134ee2651c51f0dada829f85a5fab68114729.png)   
+   3. 立体图法和层次分割法——地理![图 3](images/9948716cd25b598613343fb49c6949177f91f7f625c2363658c4cf08e1fa87e6.png)  
+ 
 
 2. 三维标量场
-   1. 面绘制法![图 3](../images/188cd1a19e51235439e23e5d2924cec7b9b9040d8e39d6f649cd28fa7a5900d2.png)  
+   1. 面绘制法![图 4](images/668460fcd994ff07b66835bc0c325c506673d2290ff175b85d0f9449a173c829.png)  
+ 
 
-   2. 体绘制法![图 4](../images/8ec4d7984b3e19a5bb2f865ee0646f4158e7ac353eedec520ae76e4558b286c3.png)  
+   2. 体绘制法![![图 4](../images/8ec4d7984b3e19a5bb2f865ee0646f4158e7ac353eedec520ae76e4558b286c3.png) 1](images/3a5a649d42a28cbabe99c5fa66b9c874abada567ff785f9398076cc32b0de422.png)  
+  
 
 3. 矢量场
-   1. 矢量数据场流线法![图 5](../images/df18a9d6542d9c7c2b90b59b8a046c100ee50648245b284078d7e57324f9f469.png)
-   2. 矢量数据场直接法![图 6](../images/d8b3aea01090ad0e27f6531eb6c7c4570f1320ea7a045e00ba46168b004b37ac.png)  
+   1. 矢量数据场流线法![图 6](images/8d8a1d317c37a57ce1cf53a25258580ae6832941697749a4332b121aff6d8c08.png)  
+
+   2. 矢量数据场直接法![图 7](images/5f5df3e47f0341f5703c370fe121119b0b7b4744cfacedbb24d5e87177fa011c.png)  
+ 
 
 ## 2. TVTK安装
 
@@ -59,7 +84,8 @@ traits是TVTK的属性，相当于用traits封装
 ### 3.1 长方体对象
 
 里面的值都可以查看
-![图 8](../images/ccf540938285a011242897bea47bb35ca81e9e2b3a894b4cae498cdae18d6ab3.png)  
+![图 8](images/70186bd53ba9a85aebfe728b0869b2b804b5f53ad84f2ecf62f733c6aaaf07b7.png)  
+ 
 更多细节看文档，以下是代码示例
 
 ```python
@@ -83,12 +109,14 @@ i.initialize( )
 i.start( )
 ```
 
-![图 11](../images/2974896bde50362b0e4b41c1fecc455abd837c41c9309c17bae295b14dda0e06.png)  
+![![图 11](../images/2974896bde50362b0e4b41c1fecc455abd837c41c9309c17bae295b14dda0e06.png)  1](images/9e262439297cdc687bdae5594adc7e3decec098fd918c164baae6a528058a101.png)  
+ 
 左键旋转，右键放大或者缩小
 
 ### 3.2 其他
 
-![图 10](../images/41e230f2f2dec2865b85b4a346138e565f0b8fb67d60d6b131ef9d574d580d06.png)  
+![![图 10](../images/41e230f2f2dec2865b85b4a346138e565f0b8fb67d60d6b131ef9d574d580d06.png)   1](images/f72e416921d8ee94ff712420fc8ec553b450f5e5823784902ee1abdfdfd59ed9.png)  
+
 还有很多
 
 ## 4 观察代码
@@ -126,8 +154,7 @@ win = ivtk_scene(a)
 win.scene.isometric_view( )
 event_loop( )
 ```
-
-![图 16](../images/698ae9c6e29b03a2e94976f7d22506920a120e508a4facf45e27028e83923304.png)  
+ 
 
 ## 5. 管线
 
@@ -138,10 +165,11 @@ event_loop( )
 2. 图形管线
 
 显示流程
-![图 12](../images/3ceb547284d3ebaec2938bb49c5660cba81622331944df18f91a6eec144bd671.png)  
-![图 14](../images/1603e6fc29e4e24eec00d07ea9fb2b81eccf11d6d57dd7248f4dee3ad36b41cc.png)  
-![图 15](../images/5caebd97573d197feb22496dc89746b089701fefdc9a5d15ec4670a6787dce0c.png)  
-![图 13](../images/88de2e9b7c765e2e5d6bb5184967e4cfedaf8b48ca71e9f771ffc70a88d3918f.png)  
+![图 11](images/eaa86267d74d430a80b51ac5182560938e10d774bde9255bb8a2b59a9ea6a381.png)  
+![图 12](images/9638f820cc0e52ac333bebc4111ac26bf0c0f68456ca3f7515661cc4ec3214f8.png)  
+![图 13](images/d35c24a2edd31f96474298b9abec99c7031fd6eb6302df9053b55edb6be9b15a.png)  
+![图 15](images/41207b87e74129ca2819c50a9322359c0127736dd7d5633dec2fc0ca1815fbd0.png)  
+
 
 ## 6. 数据集-Imagedata
 
@@ -157,10 +185,13 @@ spacing：三维网格数据的起点坐标
 origin：三维网格数据在X、Y、Z轴上的间距
 dimensions：为在X、Y、Z轴上的网格数。
 RectilinearGrid：间距不均匀的网格，所有点都在正交的网格上
-![图 17](../images/f6c3f4a534e97e398ad5e2dad04c46539056ba12ba40091a9edbd3160e04bbcb.png)  
-StructuredGrid:创建任意形状的网格，需要指定点的坐标。
+![图 18](images/34293273e16a84dbfdaefa3efb10058540c09c95ca66607477794752ee87015b.png)  
+
+StructuredGrid:创建任意形状的网格，需要指定点的坐标。![图 17](images/09594cde869f3a2772d547b99d77d2344b292abb3185917fa51b4f2e77896a55.png)  
+
 PolyData:由一系列的点、点之间的联系以及由点构成的多边形组成。
-![图 18](../images/42228dfbcd7373ddcf9bd4b88efd48f9f66c358483bdd5c376e7745ac2e64e74.png)  
+![图 16](images/7824e96f95dd2046103e10a477c44772b77e5887e75379f71e5f5ddbf968aad3.png)  
+  
 
 常用函数
 
@@ -184,7 +215,8 @@ r.dimensions = len(x),len(y),len(z)
 
 * 模型读取
 
-![图 19](../images/4d418e71baef06d81a5a7d118bcab39d9b3c710ada3357aa3f39fb6c1bb045da.png)  
+![图 19](images/85020792ee6649d566c4eb6b49a1cb5bff9bc5535d56dc906cf276ecad70f273.png)  
+ 
 
 ```python
 s = tvtk.STLReader(file_name = “stl文件名”)
@@ -240,4 +272,194 @@ win.scene.isometric_view()
 event_loop()
 ```
 
-# 二、 高级运用
+# 二、 标量可视化
+
+## 1. 等值面
+
+等值面过滤器
+tvtk.ContourFilter() 
+
+## 2. 绘制等值面
+
+### 设定N条等值线的值，一般用于重新绘制等值线
+
+generate_values(n, grid.point_data.scalars.range) 
+
+### 设指定等值面和对应的等值面的值
+
+set_value(0,0.3)
+
+```python 
+from tvtk.api import tvtk
+from tvtkfunc import ivtk_ scene
+p1ot3d = tvtk.MultiB1ockPL0T3DReader(
+              xyz_file_name= "combxyz.bin" ,
+              q_file_name="combq . bin",
+              scalar_function_number=100,
+              vector_function_number=200
+              )#读入P1ot3D数据
+plot3d.update()#让p1ot3D计算其输出数据
+grid = p1ot3d.output.get_block(0)#获取读入的数据集对象
+
+con = tvtk.ContourFilter()#创建等值面对象
+con.set_input_data(grid)
+#创建10个等值面，指定轮廓数和数据范围
+#这个地方的10会让图像更多彩
+con.generate_values(10, grid.point_data.scalars .range)
+#设定映射器的变量范围属性，最小值红色，最大值蓝色
+m =tvtk.PolyDataMapper(scalar_range = grid.point_data.scalars.range, 
+input_connection=con.output_port )
+a = tvtk.Actor(mapper = m)
+a.property.opacity = 0.5#设定透明度为0.5
+#窗口绘制
+win = ivtk_scene(a)
+
+```
+
+# 三、 矢量数据可视化
+
+## 1. 符号化技术
+
+tvtk.Glyph3D()   放缩，着色
+
+* scale_factor符号的共同放缩器
+
+* input_connection=mask.output_port
+
+## 2. 降采样
+
+tvtk.MaskPoints(random_mode=True, on_ratio)
+
+* random_mode:随机选取
+* on_ratio:每几个点选取一个
+
+## 3. 表示符号 
+
+glyph_source = tvtk.ArrowSource( )
+修改为tvtk.ConeSource( )
+scale_factor = 2
+
+```python
+from tvtk.api import tvtk
+from tvtkfunc import ivtk_ scene
+#读入数据
+p1ot3d = tvtk.MultiB1ockPL0T3DReader(
+              xyz_file_name= "combxyz.bin" ,
+              q_file_name="combq.bin",
+              scalar_function_number=100,
+              vector_function_number=200
+              )#读入P1ot3D数据
+plot3d.update()#让p1ot3D计算其输出数据
+grid = p1ot3d.output.get_block(0)#获取读入的数据集对象
+#对数据集中的数据进行随机选取，每50个 点选择一个点
+mask = tvtk.MaskPoints(random_mode=True, on_ratio=50)
+#每50个点选取一个点
+mask.set_input_data(grid)
+#创建表示箭头的PolyData数据集
+glyph_source = tvtk.ArrowSource( )
+#在Mask采样后的PolyData数据集每个点上放置一个箭头
+#箭头的方向、长度和颜色由于点对应的矢量和标量数据决定
+glyph = tvtk.Glyph3D(input_connection=mask.output_port,scale_factor=4)
+
+glyph.set_source_.connection(g1yph_source.output_port)
+m = tvtk.PolyDataMapper(scalar_range=grid. point_data.scalars.range,
+input_ .connection=glyph.output_port)
+a = tvtk.Actor(mapper=m)
+#窗口绘制
+
+```
+
+# 四、空间轮廓可视化
+
+## 1. 外边框
+
+### 计算Polydata外边框
+
+tvtk.StructuredGridOutlineFilter()
+
+
+
+## 代码
+
+```python 
+from tvtk.api import tvtk
+from tvtk.common import configure_input
+from tvtkfunc import ivtk_ scene, event_ _1oop
+p1ot3d = tvtk . MultiB1ockPL0T3DReader(
+xyz_ file_ name= "combxyz.bin",
+q_ _file_ name="combq . bin"
+scalar_ function_ number=100， vector_ function_ number=200
+)#读入P1ot3D数据
+plot3d.update()#让p1ot3D计算其输出数据
+grid = plot3d.output.get_block(0)#获取读入的 数据集对象
+outline = tvtk.StructuredGridoutlineFilter( )#计算表示外边框的PolyData对象
+configure_input(outline, grid)# 调用tvtk.common.configure_input( )
+m = tvtk.PolyDataMapper(input_connection=outline.output_port )
+a = tvtk.Actor(mapper=m)
+a. property.color = 0.3, 0.3, 0.3
+#窗口绘制
+win = ivtk_scene(a)
+win.scene.isometric_view( )
+event_loop( )
+
+```
+
+# 五、 Mayavi库
+
+## 1. 基本元素
+
+### 1 . mlab
+
+![图 21](images/994f2518c6b7302449587116b39a3a8ab11292fb9d7fa2425f2477b8e58cf7a8.png)  
+
+mlab.mesh(x,y,z)
+
+* shift+鼠标左键拖动
+* ctrl+左键旋转视角
+  
+
+### 2. API
+
+![图 22](images/f256ca7d023acceebadd774e5c6a5baf8c665b9204cff141967c79ef64f05b5f.png)  
+
+### 操作
+
+![图 23](images/4c30fab10de06406d561c2ecb16133ae5e36fb66a60b0c9e7440c229b0f21449.png)  
+
+## 2. 管线
+
+![.](images/9870f7ba147b5cbb0d4d5ccbc84d876dcf095f8595820e4f49c5952505c0c36c.png)  
+
+打开管线对话框
+mlab.show_pipeline()
+
+## 3. 基于numpy的可视化
+
+### 3D绘图函数-Points3d()
+
+* 函数形式：
+  points3d(x, y, z…)
+  points3d(x, y, z, s, …)
+  points3d(x, y, z, f, …)
+  x,y,z表示numpy数组、列表或者其他形式的点三维坐标，s表示在该坐标点处的标量值，f表示通过函数f（x，y，z）返回的标量值
+* color：VTK对象的颜色，定义为(0,1)的三元组
+* colormap：colormap的类型，例如Reds、Blues、Copper等
+* extent：x、y、z数组范围[xmin, xmax, ymin, ymax, zmin, zmax]
+* figure：画图
+* line_width：线的宽度，该值为float，默认为0.2
+* mask_points：减少/降低大规模点数据集的数量
+mode：符号的模式，例如2darrow、2dcircle、arrow、cone等
+* name：VTK对象名字
+* opcity：Vtk对象的整体透明度，该值为float型，默认为1.0
+* reset_zoom：对新加入场景数据的放缩进行重置。默认为True
+* resolution：符号的分辨率，如球体的细分数，该值为整型，默认为8
+* scale_factor：符号放缩的比例
+* scale_mode：符号的放缩模式，如vector、scalar、none
+* transparent：根据标量值确定actor的透明度
+* vmax：对colormap放缩的最大值
+* vmin：对colormap放缩的最小值
+
+![图 25](images/54e518ccec21ebbb783cae5e07070792369869213fec577ac7573a40f027faf3.png)  
+ 
+
+
