--- a/TVTK/科学计算可视化.md
+++ b/TVTK/科学计算可视化.md
@@ -27,18 +27,31 @@
   - [1. 符号化技术](#1-符号化技术)
   - [2. 降采样](#2-降采样)
   - [3. 表示符号](#3-表示符号)
-- [四、空间轮廓可视化](#四空间轮廓可视化)
+- [四、空间轮廓可视化](#四-空间轮廓可视化)
   - [1. 外边框](#1-外边框)
     - [计算Polydata外边框](#计算polydata外边框)
   - [代码](#代码)
 - [五、 Mayavi库](#五-mayavi库)
   - [1. 基本元素](#1-基本元素)
-    - [1 . mlab](#1--mlab)
+    - [1 . mlab](#1-mlab)
     - [2. API](#2-api)
     - [操作](#操作)
   - [2. 管线](#2-管线)
   - [3. 基于numpy的可视化](#3-基于numpy的可视化)
     - [3D绘图函数-Points3d()](#3d绘图函数-points3d)
+    - [mayavi.mlab.show()](#mayavimlabshow)
+    - [3D绘图函数-plot3d ()](#3d绘图函数-plot3d)
+    - [3D绘图函数-2D数据](#3d绘图函数-2d数据)
+      - [imshow()](#imshow)
+      - [surf()](#surf)
+      - [contour_surf()](#contour_surf)
+      - [mesh()](#mesh)
+      - [barchart()](#barchart)
+      - [triangular_mesh()](#triangular_mesh)
+  - [3D绘图函数-3D数据](#3d绘图函数-3d数据)
+    - [contour3d()](#contour3d)
+    - [quiver3d()](#quiver3d)
+    - [flow()](#flow)
 
 <!-- /code_chunk_output -->
 
@@ -443,7 +456,7 @@ mlab.show_pipeline()
   points3d(x, y, z, f, …)
   x,y,z表示numpy数组、列表或者其他形式的点三维坐标，s表示在该坐标点处的标量值，f表示通过函数f（x，y，z）返回的标量值
 * color：VTK对象的颜色，定义为(0,1)的三元组
-* colormap：colormap的类型，例如Reds、Blues、Copper等
+* colormap：colormap的类型，例如Reds、Blues、Copper等,改颜色的
 * extent：x、y、z数组范围[xmin, xmax, ymin, ymax, zmin, zmax]
 * figure：画图
 * line_width：线的宽度，该值为float，默认为0.2
@@ -461,5 +474,162 @@ mode：符号的模式，例如2darrow、2dcircle、arrow、cone等
 
 ![图 25](images/54e518ccec21ebbb783cae5e07070792369869213fec577ac7573a40f027faf3.png)  
  
+```python
+import numpy as np
+from mayavi import mlab
+#建立数据
+t = np.linspace(0, 4 * np.pi, 20)
+x = np.sin(2 * t)
+y = np.cos(t)
+z = np.cos(2 * t)
+s = 2+ np.sin(t)
+#对数据进行可视化
+points = mlab.points3d(x, y, z, s,colormap="Reds",scale_factor=.25)
+mlab.show()
+
+```
+
+### mayavi.mlab.show()
+
+mayavi.mlab.show(func = None, stop = False)
+定义GUI时间对话框是否结束
+
+### 3D绘图函数-plot3d ()
+
+* 函数形式：
+  plot3d(x, y, z…)
+  plot3d(x, y, z, s, …)
+  x,y,z表示numpy数组，或列表。给出了线上连续的点的位置，s表示在该坐标点处的标量值
+* color、colormap、extent、figure、line_width、name、opacity、representation、reset_zoom、transparent、tube_radius、tube_sides、vmax、vmin
+* 参数 说明
+  tube_radius 线管的半径，用于描述线的粗细
+  tube_sides 表示线的分段数，该值为整数，默认为6
+
+```python
+import numpy as np
+from mayavi import mlab
+#建立数据
+n_mer，n_long =6，11
+dphi = np.pi / 1000.0
+phi = np.arange(0.0，2 * np.pi + 0.5 * dphi, dphi)
+mu=phi*n_mer
+x = np.cos(mu) * (1 + np.cos(n_long * mu / n_ mer)
+* 0.5)
+y = np.sin(mu) * (1 + np.cos(n_long * mu / n_ mer) * 0.5)
+z=np.sin(n_1ong*mu/n_mer)*0.5
+#对数据进行可视化
+l = mlab.p1ot3d(x,y,z,np.sin(mu), tube_radius=0.025，colormap= 'Spectral')
+mlab.show( )
+```
+plot3d(x, y, z, np.sin(mu), tube_radius=0.025,
+colormap=‘Spectral’)
+x,y,z表示numpy数组，给出了线上连续的点的位置,np.sin(mu)表示在该坐标点处的标量值,tube_radius绘制线的半径为0.025,colormap采用Spectral颜色模式。
+
+### 3D绘图函数-2D数据
+
+#### imshow() 
+
+将二维数组可视化为一张图像
+函数形式：
+  imshow(s, …)
+  s是一个二维数组,s的值使用colormap被映射为颜*
+
+* color、colormap、extent、figure、interpolate、line_width、name、opacity、reset_zoom、transparent、vmax、vmin
+
+* interpolate：图像中的像素是否被插值，该值为布尔型，默认为True
 
 
+#### surf()
+
+将二维数组可视化为一个平面，Z轴描述了数组点的高度
+函数形式：
+surf(s, …)
+surf(x, y, s,…)
+surf(x, y, f,…)
+s是一个高程矩阵，用二维数组表示
+
+```python
+import numpy asnp
+from mayavi import mlab 
+def f(x, y):
+  return np.sin(x - y)+np.cos(x + y)
+x，y = np.mgrid[-7. :7.05:0.1， -5. :5.05:0.05]
+S = m1ab.surf(x, y, f )
+mlab.show( )
+```
+
+![图 26](images/b29410864d08a6eae97ad0a4af32afbeb5e35631d8aa2a8868c8722be1fb8878.png)  
+
+#### contour_surf()
+
+将二位数组可视化为等高线，高度值由数组点的值来确定,与Surf()类似，但求解的是等值线
+
+```python
+import numpy asnp
+from mayavi import mlab 
+def f(x, y):
+  return np.sin(x - y)+np.cos(x + y)
+x，y = np.mgrid[-7. :7.05:0.1， -5. :5.05:0.05]
+S = mlab.contour_surf(x, y, f )
+mlab.show( )
+```
+![图 27](images/9c48381078b7ebe557e834a28feaee0cbc09ae89c998dff61274bc273bc0eded.png)  ![1](images/3bd9ab6fb901ccf69e1befc944b18f606f2e4aa4821cfb7717c4b89b4abd18eb.png)  
+
+#### mesh()
+
+绘制由三个二维数组x、y、z描述坐标点的网格平面
+
+#### barchart() 
+
+根据二维、三维或者点云数据绘制的三维柱状图
+
+#### triangular_mesh() 
+
+绘制由x、y、z坐标点描述的三角网格面
+
+
+## 3D绘图函数-3D数据
+
+### contour3d()
+
+三维数组定义的体数据的等值面可视化,
+函数形式：
+
+* contour3d(scalars, …)
+* contour3d(x, y, z，scalars,…)
+* scalars网格上的数据，用三维numpy数组表示。x，y，z三维空间坐标
+* contours 定义等值面的数量
+
+```python
+import numpy as np
+from mayavi import mlab
+x, y, Z = np.ogrid[-5:5:64j， -5:5:64j, -5:5:64j ]
+scalars = X*x+y*y+Z* z
+obj = mlab. contour3d(scalars，contours=8， transparent=True )#透明表示
+mlab.show()
+```
+
+### quiver3d() 
+
+三维矢量数据的可视化，箭头表示在该点的矢量数据
+函数形式：
+* quiver3d(u，v，w …)
+* quiver3d(x，y，z，u，v，w …)
+* quiver3d(x，y，z，f，…)
+* u，v，w用numpy数组表示的向量，x，y，z表示箭头的位置， u，v，w矢量元素，f需要返回在给定位置（x，y，z）的（u，v，w）矢量
+
+```python
+import numpy as np
+from mayavi import mlab
+x, y,z = np.mgrid[-2:3, -2:3, -2:3]
+r = np.sqrt(x**2+y**2+z**4)
+u= y * np.sin(r) / (r + 0.001)
+V=-x*np.sin(r)/(r+0.001)
+W = np.zeros_like(z)
+obj = mlab.quiver3d(x, y, z, u, V, W, line_width=3, scale_ factor=1)
+mlab.show( )
+```
+
+### flow() 
+
+绘制3维数组描述的向量场的粒子轨迹
