--- a/TVTK/科学计算可视化.md
+++ b/TVTK/科学计算可视化.md
@@ -3,14 +3,13 @@
 <!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
 
 <!-- code_chunk_output -->
-
 - [一、 TVTK库简要介绍](#一-tvtk库简要介绍)
   - [1. 目的：科学计算可视化](#1-目的科学计算可视化)
   - [2. TVTK安装](#2-tvtk安装)
   - [3. 三维基本对象](#3-三维基本对象)
     - [3.1 长方体对象](#31-长方体对象)
     - [3.2 其他](#32-其他)
-  - [4 观察代码](#4-观察代码)
+  - [4. 观察代码](#4-观察代码)
   - [5. 管线](#5-管线)
   - [6. 数据集-Imagedata](#6-数据集-imagedata)
   - [7. 数据加载](#7-数据加载)
@@ -27,20 +26,20 @@
   - [1. 符号化技术](#1-符号化技术)
   - [2. 降采样](#2-降采样)
   - [3. 表示符号](#3-表示符号)
-- [四、空间轮廓可视化](#四-空间轮廓可视化)
+- [四、空间轮廓可视化](#四空间轮廓可视化)
   - [1. 外边框](#1-外边框)
     - [计算Polydata外边框](#计算polydata外边框)
   - [代码](#代码)
 - [五、 Mayavi库](#五-mayavi库)
   - [1. 基本元素](#1-基本元素)
-    - [1 . mlab](#1-mlab)
+    - [1 . mlab](#1--mlab)
     - [2. API](#2-api)
     - [操作](#操作)
   - [2. 管线](#2-管线)
   - [3. 基于numpy的可视化](#3-基于numpy的可视化)
     - [3D绘图函数-Points3d()](#3d绘图函数-points3d)
     - [mayavi.mlab.show()](#mayavimlabshow)
-    - [3D绘图函数-plot3d ()](#3d绘图函数-plot3d)
+    - [3D绘图函数-plot3d ()](#3d绘图函数-plot3d-)
     - [3D绘图函数-2D数据](#3d绘图函数-2d数据)
       - [imshow()](#imshow)
       - [surf()](#surf)
@@ -48,10 +47,18 @@
       - [mesh()](#mesh)
       - [barchart()](#barchart)
       - [triangular_mesh()](#triangular_mesh)
-  - [3D绘图函数-3D数据](#3d绘图函数-3d数据)
-    - [contour3d()](#contour3d)
-    - [quiver3d()](#quiver3d)
-    - [flow()](#flow)
+    - [3D绘图函数-3D数据](#3d绘图函数-3d数据)
+      - [contour3d()](#contour3d)
+      - [quiver3d()](#quiver3d)
+      - [flow()](#flow)
+    - [改变颜色](#改变颜色)
+    - [图像控制函数](#图像控制函数)
+    - [图像装饰函数](#图像装饰函数)
+    - [相机控制函数](#相机控制函数)
+    - [其他控制函数](#其他控制函数)
+  - [鼠标选取](#鼠标选取)
+  - [mlab管线控制函数](#mlab管线控制函数)
+    - [Mlab管线控制函数的调用](#mlab管线控制函数的调用)
 
 <!-- /code_chunk_output -->
 
@@ -61,22 +68,15 @@
 
 1. 二维标量场
    1. 颜色映射法![![图](img/20200626213842.png) 1](images/8c002b36235cffb9285b2557c91afa44340a9560cda43189bd41a0ec05a308b1.png)  
-   2. 等值线![![图 1](../images/85b9c51730f4b9a6f75ccc6f0151c9b78d2162f25ee16673fa0ea0b7ad677e3e.png)  1](images/9a5d9f2aedb8f329bcdce243b41134ee2651c51f0dada829f85a5fab68114729.png)   
+   2. 等值线![![图 1](../images/85b9c51730f4b9a6f75ccc6f0151c9b78d2162f25ee16673fa0ea0b7ad677e3e.png)  1](images/9a5d9f2aedb8f329bcdce243b41134ee2651c51f0dada829f85a5fab68114729.png)
    3. 立体图法和层次分割法——地理![图 3](images/9948716cd25b598613343fb49c6949177f91f7f625c2363658c4cf08e1fa87e6.png)  
- 
-
 2. 三维标量场
    1. 面绘制法![图 4](images/668460fcd994ff07b66835bc0c325c506673d2290ff175b85d0f9449a173c829.png)  
- 
-
    2. 体绘制法![![图 4](../images/8ec4d7984b3e19a5bb2f865ee0646f4158e7ac353eedec520ae76e4558b286c3.png) 1](images/3a5a649d42a28cbabe99c5fa66b9c874abada567ff785f9398076cc32b0de422.png)  
-  
-
 3. 矢量场
    1. 矢量数据场流线法![图 6](images/8d8a1d317c37a57ce1cf53a25258580ae6832941697749a4332b121aff6d8c08.png)  
 
    2. 矢量数据场直接法![图 7](images/5f5df3e47f0341f5703c370fe121119b0b7b4744cfacedbb24d5e87177fa011c.png)  
- 
 
 ## 2. TVTK安装
 
@@ -98,7 +98,6 @@ traits是TVTK的属性，相当于用traits封装
 
 里面的值都可以查看
 ![图 8](images/70186bd53ba9a85aebfe728b0869b2b804b5f53ad84f2ecf62f733c6aaaf07b7.png)  
- 
 更多细节看文档，以下是代码示例
 
 ```python
@@ -123,7 +122,6 @@ i.start( )
 ```
 
 ![![图 11](../images/2974896bde50362b0e4b41c1fecc455abd837c41c9309c17bae295b14dda0e06.png)  1](images/9e262439297cdc687bdae5594adc7e3decec098fd918c164baae6a528058a101.png)  
- 
 左键旋转，右键放大或者缩小
 
 ### 3.2 其他
@@ -132,7 +130,7 @@ i.start( )
 
 还有很多
 
-## 4 观察代码
+## 4. 观察代码
 
 ```python
 from tvtk.api import tvtk
@@ -167,7 +165,6 @@ win = ivtk_scene(a)
 win.scene.isometric_view( )
 event_loop( )
 ```
- 
 
 ## 5. 管线
 
@@ -183,16 +180,15 @@ event_loop( )
 ![图 13](images/d35c24a2edd31f96474298b9abec99c7031fd6eb6302df9053b55edb6be9b15a.png)  
 ![图 15](images/41207b87e74129ca2819c50a9322359c0127736dd7d5633dec2fc0ca1815fbd0.png)  
 
-
 ## 6. 数据集-Imagedata
 
 包含点和数据
 
-* 点（Point）和数据（Data）
-* 点之间：连接 or 非连接
-* 多个相关的点组成单元（Cell）
-* 点的连接：显式 or 隐式
-* 数据：标量（Scalar）vs 矢量（Vector）
+- 点（Point）和数据（Data）
+- 点之间：连接 or 非连接
+- 多个相关的点组成单元（Cell）
+- 点的连接：显式 or 隐式
+- 数据：标量（Scalar）vs 矢量（Vector）
 
 spacing：三维网格数据的起点坐标
 origin：三维网格数据在X、Y、Z轴上的间距
@@ -205,7 +201,6 @@ StructuredGrid:创建任意形状的网格，需要指定点的坐标。![图 17
 PolyData:由一系列的点、点之间的联系以及由点构成的多边形组成。
 ![图 16](images/7824e96f95dd2046103e10a477c44772b77e5887e75379f71e5f5ddbf968aad3.png)  
   
-
 常用函数
 
 ```python
@@ -226,10 +221,9 @@ r.dimensions = len(x),len(y),len(z)
 
 ## 7. 数据加载
 
-* 模型读取
+- 模型读取
 
 ![图 19](images/85020792ee6649d566c4eb6b49a1cb5bff9bc5535d56dc906cf276ecad70f273.png)  
- 
 
 ```python
 s = tvtk.STLReader(file_name = “stl文件名”)
@@ -239,9 +233,9 @@ a = tvtk.Actor(mapper=m)
 
 Plot3D文件
 
-* 网格 (XYZ 文件),
-* 空气动力学结果 (Q 文件)
-* 通用结果
+- 网格 (XYZ 文件),
+- 空气动力学结果 (Q 文件)
+- 通用结果
 multiBlock
 
 ```python
@@ -290,19 +284,19 @@ event_loop()
 ## 1. 等值面
 
 等值面过滤器
-tvtk.ContourFilter() 
+tvtk.ContourFilter()
 
 ## 2. 绘制等值面
 
 ### 设定N条等值线的值，一般用于重新绘制等值线
 
-generate_values(n, grid.point_data.scalars.range) 
+generate_values(n, grid.point_data.scalars.range)
 
 ### 设指定等值面和对应的等值面的值
 
 set_value(0,0.3)
 
-```python 
+```python
 from tvtk.api import tvtk
 from tvtkfunc import ivtk_ scene
 p1ot3d = tvtk.MultiB1ockPL0T3DReader(
@@ -320,7 +314,7 @@ con.set_input_data(grid)
 #这个地方的10会让图像更多彩
 con.generate_values(10, grid.point_data.scalars .range)
 #设定映射器的变量范围属性，最小值红色，最大值蓝色
-m =tvtk.PolyDataMapper(scalar_range = grid.point_data.scalars.range, 
+m =tvtk.PolyDataMapper(scalar_range = grid.point_data.scalars.range,
 input_connection=con.output_port )
 a = tvtk.Actor(mapper = m)
 a.property.opacity = 0.5#设定透明度为0.5
@@ -335,18 +329,18 @@ win = ivtk_scene(a)
 
 tvtk.Glyph3D()   放缩，着色
 
-* scale_factor符号的共同放缩器
+- scale_factor符号的共同放缩器
 
-* input_connection=mask.output_port
+- input_connection=mask.output_port
 
 ## 2. 降采样
 
 tvtk.MaskPoints(random_mode=True, on_ratio)
 
-* random_mode:随机选取
-* on_ratio:每几个点选取一个
+- random_mode:随机选取
+- on_ratio:每几个点选取一个
 
-## 3. 表示符号 
+## 3. 表示符号
 
 glyph_source = tvtk.ArrowSource( )
 修改为tvtk.ConeSource( )
@@ -390,11 +384,9 @@ a = tvtk.Actor(mapper=m)
 
 tvtk.StructuredGridOutlineFilter()
 
-
-
 ## 代码
 
-```python 
+```python
 from tvtk.api import tvtk
 from tvtk.common import configure_input
 from tvtkfunc import ivtk_ scene, event_ _1oop
@@ -427,10 +419,9 @@ event_loop( )
 
 mlab.mesh(x,y,z)
 
-* shift+鼠标左键拖动
-* ctrl+左键旋转视角
+- shift+鼠标左键拖动
+- ctrl+左键旋转视角
   
-
 ### 2. API
 
 ![图 22](images/f256ca7d023acceebadd774e5c6a5baf8c665b9204cff141967c79ef64f05b5f.png)  
@@ -450,30 +441,30 @@ mlab.show_pipeline()
 
 ### 3D绘图函数-Points3d()
 
-* 函数形式：
+- 函数形式：
   points3d(x, y, z…)
   points3d(x, y, z, s, …)
   points3d(x, y, z, f, …)
   x,y,z表示numpy数组、列表或者其他形式的点三维坐标，s表示在该坐标点处的标量值，f表示通过函数f（x，y，z）返回的标量值
-* color：VTK对象的颜色，定义为(0,1)的三元组
-* colormap：colormap的类型，例如Reds、Blues、Copper等,改颜色的
-* extent：x、y、z数组范围[xmin, xmax, ymin, ymax, zmin, zmax]
-* figure：画图
-* line_width：线的宽度，该值为float，默认为0.2
-* mask_points：减少/降低大规模点数据集的数量
+- color：VTK对象的颜色，定义为(0,1)的三元组
+- colormap：colormap的类型，例如Reds、Blues、Copper等,改颜色的
+- extent：x、y、z数组范围[xmin, xmax, ymin, ymax, zmin, zmax]
+- figure：画图
+- line_width：线的宽度，该值为float，默认为0.2
+- mask_points：减少/降低大规模点数据集的数量
 mode：符号的模式，例如2darrow、2dcircle、arrow、cone等
-* name：VTK对象名字
-* opcity：Vtk对象的整体透明度，该值为float型，默认为1.0
-* reset_zoom：对新加入场景数据的放缩进行重置。默认为True
-* resolution：符号的分辨率，如球体的细分数，该值为整型，默认为8
-* scale_factor：符号放缩的比例
-* scale_mode：符号的放缩模式，如vector、scalar、none
-* transparent：根据标量值确定actor的透明度
-* vmax：对colormap放缩的最大值
-* vmin：对colormap放缩的最小值
+- name：VTK对象名字
+- opcity：Vtk对象的整体透明度，该值为float型，默认为1.0
+- reset_zoom：对新加入场景数据的放缩进行重置。默认为True
+- resolution：符号的分辨率，如球体的细分数，该值为整型，默认为8
+- scale_factor：符号放缩的比例
+- scale_mode：符号的放缩模式，如vector、scalar、none
+- transparent：根据标量值确定actor的透明度
+- vmax：对colormap放缩的最大值
+- vmin：对colormap放缩的最小值
 
 ![图 25](images/54e518ccec21ebbb783cae5e07070792369869213fec577ac7573a40f027faf3.png)  
- 
+
 ```python
 import numpy as np
 from mayavi import mlab
@@ -496,12 +487,12 @@ mayavi.mlab.show(func = None, stop = False)
 
 ### 3D绘图函数-plot3d ()
 
-* 函数形式：
+- 函数形式：
   plot3d(x, y, z…)
   plot3d(x, y, z, s, …)
   x,y,z表示numpy数组，或列表。给出了线上连续的点的位置，s表示在该坐标点处的标量值
-* color、colormap、extent、figure、line_width、name、opacity、representation、reset_zoom、transparent、tube_radius、tube_sides、vmax、vmin
-* 参数 说明
+- color、colormap、extent、figure、line_width、name、opacity、representation、reset_zoom、transparent、tube_radius、tube_sides、vmax、vmin
+- 参数 说明
   tube_radius 线管的半径，用于描述线的粗细
   tube_sides 表示线的分段数，该值为整数，默认为6
 
@@ -521,36 +512,37 @@ z=np.sin(n_1ong*mu/n_mer)*0.5
 l = mlab.p1ot3d(x,y,z,np.sin(mu), tube_radius=0.025，colormap= 'Spectral')
 mlab.show( )
 ```
+
 plot3d(x, y, z, np.sin(mu), tube_radius=0.025,
 colormap=‘Spectral’)
 x,y,z表示numpy数组，给出了线上连续的点的位置,np.sin(mu)表示在该坐标点处的标量值,tube_radius绘制线的半径为0.025,colormap采用Spectral颜色模式。
 
 ### 3D绘图函数-2D数据
 
-#### imshow() 
+#### imshow()
 
 将二维数组可视化为一张图像
 函数形式：
   imshow(s, …)
   s是一个二维数组,s的值使用colormap被映射为颜*
 
-* color、colormap、extent、figure、interpolate、line_width、name、opacity、reset_zoom、transparent、vmax、vmin
+- color、colormap、extent、figure、interpolate、line_width、name、opacity、reset_zoom、transparent、vmax、vmin
 
-* interpolate：图像中的像素是否被插值，该值为布尔型，默认为True
-
+- interpolate：图像中的像素是否被插值，该值为布尔型，默认为True
 
 #### surf()
 
 将二维数组可视化为一个平面，Z轴描述了数组点的高度
-函数形式：
-surf(s, …)
-surf(x, y, s,…)
-surf(x, y, f,…)
-s是一个高程矩阵，用二维数组表示
+
+- 函数形式
+  surf(s, …)
+  surf(x, y, s,…)
+  surf(x, y, f,…)
+  s是一个高程矩阵，用二维数组表示
 
 ```python
-import numpy asnp
-from mayavi import mlab 
+import numpy as np
+from mayavi import mlab
 def f(x, y):
   return np.sin(x - y)+np.cos(x + y)
 x，y = np.mgrid[-7. :7.05:0.1， -5. :5.05:0.05]
@@ -565,40 +557,40 @@ mlab.show( )
 将二位数组可视化为等高线，高度值由数组点的值来确定,与Surf()类似，但求解的是等值线
 
 ```python
-import numpy asnp
-from mayavi import mlab 
+import numpy as np
+from mayavi import mlab
 def f(x, y):
   return np.sin(x - y)+np.cos(x + y)
 x，y = np.mgrid[-7. :7.05:0.1， -5. :5.05:0.05]
 S = mlab.contour_surf(x, y, f )
 mlab.show( )
 ```
+
 ![图 27](images/9c48381078b7ebe557e834a28feaee0cbc09ae89c998dff61274bc273bc0eded.png)  ![1](images/3bd9ab6fb901ccf69e1befc944b18f606f2e4aa4821cfb7717c4b89b4abd18eb.png)  
 
 #### mesh()
 
 绘制由三个二维数组x、y、z描述坐标点的网格平面
 
-#### barchart() 
+#### barchart()
 
 根据二维、三维或者点云数据绘制的三维柱状图
 
-#### triangular_mesh() 
+#### triangular_mesh()
 
 绘制由x、y、z坐标点描述的三角网格面
 
+### 3D绘图函数-3D数据
 
-## 3D绘图函数-3D数据
-
-### contour3d()
+#### contour3d()
 
 三维数组定义的体数据的等值面可视化,
 函数形式：
 
-* contour3d(scalars, …)
-* contour3d(x, y, z，scalars,…)
-* scalars网格上的数据，用三维numpy数组表示。x，y，z三维空间坐标
-* contours 定义等值面的数量
+- contour3d(scalars, …)
+- contour3d(x, y, z，scalars,…)
+- scalars网格上的数据，用三维numpy数组表示。x，y，z三维空间坐标
+- contours 定义等值面的数量
 
 ```python
 import numpy as np
@@ -609,14 +601,15 @@ obj = mlab. contour3d(scalars，contours=8， transparent=True )#透明表示
 mlab.show()
 ```
 
-### quiver3d() 
+#### quiver3d()
 
 三维矢量数据的可视化，箭头表示在该点的矢量数据
-函数形式：
-* quiver3d(u，v，w …)
-* quiver3d(x，y，z，u，v，w …)
-* quiver3d(x，y，z，f，…)
-* u，v，w用numpy数组表示的向量，x，y，z表示箭头的位置， u，v，w矢量元素，f需要返回在给定位置（x，y，z）的（u，v，w）矢量
+
+- 函数形式：
+  - quiver3d(u，v，w …)
+  - quiver3d(x，y，z，u，v，w …)
+  - quiver3d(x，y，z，f，…)
+  - u，v，w用numpy数组表示的向量，x，y，z表示箭头的位置， u，v，w矢量元素，f需要返回在给定位置（x，y，z）的（u，v，w）矢量
 
 ```python
 import numpy as np
@@ -630,6 +623,134 @@ obj = mlab.quiver3d(x, y, z, u, V, W, line_width=3, scale_ factor=1)
 mlab.show( )
 ```
 
-### flow() 
+#### flow()
 
 绘制3维数组描述的向量场的粒子轨迹
+
+### 改变颜色
+
+常见的colormaps
+=accent flag hot pubu set2
+autumn gist_earth hsv pubugn set3
+black-white gist_gray jet puor spectral
+blue-red gist_heat oranges purd spring
+blues gist_ncar orrd purples summer
+bone gist_rainbow paired rdbu winter
+brbg gist_stern pastel1 rdgy ylgnbu
+bugn gist_yarg pastel2 rdpu ylgn
+bupu gnbu pink rdylbu ylorbr
+cool gray piyg rdylgn ylorrd
+copper greens prgn reds
+dark2 greys prism setl
+
+lut
+
+### 图像控制函数
+
+- clf 清空当前图像 mlab.clf(figure=None)
+- close 关闭图像窗口 mlab.close(scene=None, all=False)
+- draw 重新绘制当前图像mlab.close(figure=None)
+- figure：建立一个新的Scene或者访问一个存在的Scene
+mlab.figure(figure=None,bgcolor=None,fgcolor=None,
+engine=None,size=(400,350))
+- gcf 返回当前图像的handle mlab.gc(figure=None)
+- savefig 存储当前的前景，输出为一个文件，如png、jpg、bmp、tiff、pdf、obj、vrml等
+
+### 图像装饰函数
+
+- cololorbar 为对象的颜色映射增加颜色条
+mlab.clolorbar(object=None, title=None, orientation=None, nb_labels=None, nb_colors=None, label_fmt=None)
+- scalarbar 为对象的标量颜色映射增加颜色条
+- vectorbar 为对象的矢量颜色映射增加颜色条
+- xlabel 建立坐标轴，并添加x轴的标签  
+  mlab.xlabel(text, object=None)
+- ylabel 建立坐标轴，并添加y轴的标签
+- zlabel 建立坐标轴，并添加z轴的标签
+
+### 相机控制函数
+
+- move 移动相机和焦点
+mlab.move(forward=None, right=None, up=None)
+- pitch 沿着“向右”轴旋转角度mlab.pitch(degrees)
+- roll 设置/获取相机沿“向前”轴旋转一定角度
+mlab.roll(roll=None, figure=None)
+- view 设置/获取当前视图中相机的视点
+mlab.view(azimuth=None, elevation=None, distance=None, focalpoint=None, roll=None, reset_roll=True, figure=None)
+- yaw 沿着“向上”轴旋转一定角度，
+  mlab.yaw(degrees)
+
+### 其他控制函数
+
+- animate动画控制函数
+mlab.animate(func=None, delay=500, ui=True)
+axes 为当前物体设置坐标轴 mlab.axes(*args, **kwargs)
+- outline 为当前物体建立外轮廓
+  mlab.outline(*args, **kwargs)
+- show 与当前图像开始交互 mlab.show(func=None, stop=False)
+- show_pipeline 显示mayavi的管线对话框，可一进行场景属性的设置和编辑
+- text 为图像添加文本mlab.text(*args, **kwargs)
+- title 为绘制图像建立标题 mlab.title(*args, **kwargs)
+
+## 鼠标选取
+
+- 选取一个物体，查看数据
+- 选取物体上一点，查看数据
+
+鼠标选取
+on_mouse_pick(callback, type=‘point’,Button=‘Left’,Remove=False)
+
+- Type:’point’,’cell’or ‘world’
+- Button:’Left’,’Middle’or ‘Right’
+- Remove:如果值为True，则callback函数不起作用
+- 返回：一个vtk picker 对象
+
+```python
+
+```
+
+## mlab管线控制函数
+
+### Mlab管线控制函数的调用
+
+- mlab.pipeline.function()
+- Sources：数据源
+- Filters：用来数据变换
+- Modules：用来实现可视化
+
+Sources
+
+- grid_source 建立二维网格数据
+- line_source 建立线数据
+- open 打开一个数据文件
+- scalar_field 建立标量场数据
+- vector_field 建立矢量场数据
+- volume_filed 建立体数据
+
+Filters---32个
+
+- contour 对输入数据集计算等值面
+- cut_plane 对数据进行切面计算，可以交互的更改和移动切面
+- delaunay2D 执行二维delaunay三角化
+- delaunay3D 执行三维delaunay三角化
+- extract_grid 允许用户选择structured grid的一部分数据
+- extract_vector_norm 计算数据矢量的法向量，特别用于在计算矢量数据的梯度时
+- mask_points 对输入数据进行采样
+- threshold 取一定阈值范围内的数据
+- transform_data 对输入数据执行线性变换
+- tube 将线转成管线数据
+  
+Module 23个
+
+- axes 绘制坐标轴
+- glyph对输入点绘制不同类型的符号，符号的颜色和方向由该点的标量和适量数据决定。
+- image_plane_widget 绘制某一平面数据的细节
+- iso_surface 对输入的体数据绘制其等值面
+- outline 对输入数据绘制外轮廓
+- scalar_cut_plane 对输入的标量数据绘制特定位置的切平面
+- streamline 对矢量数据绘制流线
+- surface 对数据（VTK dataset，mayavi sources）建立外表面
+- text 绘制一段文本
+- vector_cut_plane 对输入的矢量数据绘制特定位置的切平面
+- volume 对标量场数据进行体绘制
+
+可参考官方网站<http://docs.enthought.com/mayavi/mayavi/auto/mlab_reference.html>
